bk_ida/gccida/g1/replace_oldest_value_addr
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/replace_oldest_value_addr/src/regrename.c:1840:44: error: must use 'enum' tag to refer to type 'reg_class'
bool  replace_oldest_value_addr( rtx *loc, reg_class a2, machine_mode mode, rtx insn,  struct value_data *vd) 
                                           ^
                                           enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/replace_oldest_value_addr/src/regrename.c:1840:58: error: must use 'enum' tag to refer to type 'machine_mode'
bool  replace_oldest_value_addr( rtx *loc, reg_class a2, machine_mode mode, rtx insn,  struct value_data *vd) 
                                                         ^
                                                         enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/replace_oldest_value_addr/src/regrename.c:1882:28: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v12 = ( unsigned __int16 *)v7[1]; 
                           ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/replace_oldest_value_addr/src/regrename.c:2035:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v7 + 2), 
  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/replace_oldest_value_addr/src/obj/regrename.o] Error 1
